# src/routes.ts
@@ -21,13 +21,14 @@ export const Routes: IRoute[] = [
   },
   {
     method: "get",
-    route: "/ver/:hash",
+    route: "/verifyAccount/:hash",
     controller: AuthController,
     action: "verifyAccount"
   },
   {
     method: "get",
-    route: "/api/users",
+    // todo: protect route
+    route: "/users",
     controller: UserController,
     action: "all"
   },
